# Puzzler

./: Cargo.toml
examples/: display_icon.rs  draw_empty.rs  draw_icon.rs  move.rs  simple_command.rs  simple_obstacle.rs
src/: lib.rs
src/ecs/components/: command.rs  debug_information.rs  display.rs  identifier.rs  input.rs  keyboard_input.rs  mod.rs  occupancy.rs  physics.rs  position.rs  tile.rs
src/ecs/entities/: level.rs
src/ecs/systems/: commandable.rs  commands.rs  mod.rs  movable.rs  movement.rs
src/ecs/systems/input/: keyboard_input.rs  mod.rs
src/model/: commands.rs  game_state.rs  level.rs  mod.rs
src/view/: constants.rs  mod.rs
