[package]
name = "puzzler"
version = "0.1.0"
authors = ["Marc Haubenstock <marchaubenstock@Marcs-MacBook-Pro.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version="0.14", features = ["event-stream"]}
array2d = "0.2.1"